force-app/main/messaging/objects/Notification_Type__mdt/Notification_Type__mdt.object-meta.xml
<CustomObject>
    <label>Notification Type</label>
    <pluralLabel>Notification Types</pluralLabel>
</CustomObject>