force-app/main/messaging/objects/Notification_Type__mdt/fields/IsStudyLevel__c.field-meta.xml
<CustomField>
    <fullName>IsStudyLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStudyLevel</label>
    <type>Checkbox</type>
</CustomField>