force-app/main/messaging/objects/Notification_Type__mdt/fields/Parameters_Provider__c.field-meta.xml
<CustomField>
    <fullName>Parameters_Provider__c</fullName>
    <label>Parameters Provider</label>
    <referenceTo>Parameters_Provider__mdt</referenceTo>
    <relationshipLabel>Notification Types</relationshipLabel>
    <relationshipName>Notification_Types</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>