force-app/main/messaging/objects/Notification_Type__mdt/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
                <default>true</default>
                <label>PI</label>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>External Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>